chore: mark compatibility with shopware 6.7

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "tinect/altcha-captcha",
     "description": "Self-hosted Altcha Captcha plugin for Shopware 6. Adds secure, user-friendly bot protection without relying on third-party services.",
     "type": "shopware-platform-plugin",
-    "version": "1.2.1",
+    "version": "1.3.0",
     "authors": [
         {
             "name": "tinect"
@@ -10,7 +10,7 @@
     ],
     "require": {
         "shopware/storefront": "*",
-        "shopware/core": "~6.6.0",
+        "shopware/core": "~6.6.0||~6.7.0",
         "altcha-org/altcha": "^1.2"
     },
     "license": "MIT",
